--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ plugins {
 	id 'io.spring.dependency-management' version '1.0.10.RELEASE'
 	id 'java'
 	id 'application'
+	id 'com.bmuschko.docker-spring-boot-application' version "6.6.1"
 }
 
 group = 'br.gov.ro.pge'
@@ -13,6 +14,14 @@ mainClassName = 'br.gov.ro.pge.sei.api.SeiApiApplication'
 
 repositories {
 	mavenCentral()
+}
+
+docker {
+    springBootApplication {
+        baseImage = 'openjdk:11'
+        maintainer = 'PGE-RO "suporte@pge.ro.gov.br"'
+        ports = [8080]
+    }
 }
 
 sourceSets {
