--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,5 @@
 stages:
+  - analyze
   - test
   - build
   - images
@@ -138,3 +139,20 @@ docker_clean:
     - echo "Limpando imagens antigas e mantendo apenas a latest e a $IMAGE_TAG"
     - for i in `docker images|grep $IMAGE_NAME|egrep -v latest|egrep -v $IMAGE_TAG | awk '{ print $3 }'`;do docker rmi -f $i;done
 
+sonarqube-check:
+  stage: analyze
+  image: openjdk:11
+  tags:
+    - docker-runner
+  variables:
+    SONAR_USER_HOME: "${CI_PROJECT_DIR}/.sonar"  # Defines the location of the analysis task cache
+    GIT_DEPTH: "0"  # Tells git to fetch all the branches of the project, required by the analysis task
+  cache:
+    key: "${CI_JOB_NAME}"
+    paths:
+      - .sonar/cache
+  script:
+    - ./gradlew sonarqube
+  allow_failure: true
+  only:
+    - develop
