--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ plugins {
 	id 'java'
 	id 'application'
 	id 'com.bmuschko.docker-spring-boot-application' version "6.6.1"
+	id "org.sonarqube" version "3.3"
 }
 
 group = 'br.gov.ro.pge'
@@ -76,4 +77,11 @@ dependencies {
 
 test {
 	useJUnitPlatform()
+}
+
+sonarqube {
+	properties {
+		property "sonar.projectKey", "pge-dev_sei-api_AXuXMifNNgcP-jZ8rGBj"
+		property "sonar.qualitygate.wait", true
+	}
 }
