refactor(sei api): realizado a alteração da url de http para https
Realizado a alteração da url de http para https.

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -26,7 +26,7 @@ management.endpoint.info.enabled=true
 # JSON Properties
 spring.jackson.time-zone=America/Porto_Velho
 
-br.gov.ro.pge.sei.api.ws.url=http://treinamento.sei.sistemas.ro.gov.br/sei/ws/SeiWS.php
+br.gov.ro.pge.sei.api.ws.url=https://treinamento.sei.sistemas.ro.gov.br/sei/ws/SeiWS.php
 br.gov.ro.pge.sei.api.ws.sistema=RATIO
 br.gov.ro.pge.sei.api.ws.servico=SERVICE
 br.gov.ro.pge.sei.api.ws.unidade=
