feat(consultarDocumento) :iss-feature/iss-2 - Criar serviço ConsultarDocumento

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.profiles.active=${SPRING_PROFILES_ACTIVE:dev}
-
+server.port=8080
 br.gov.ro.pge.sei.api.properties.baseName=messages
 br.gov.ro.pge.sei.api.properties.language=pt
 br.gov.ro.pge.sei.api.properties.country=BR
