corrigido url do registry

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,7 @@ stages:
   - clean
 
 variables:
-  IMAGE_NAME: $REGISTRY_URL/$CI_PROJECT_NAME
+  IMAGE_NAME: $REGISTRY_URL/$NAMESPACE/$CI_PROJECT_NAME
   IMAGE_TAG: $CI_COMMIT_REF_NAME-$CI_PIPELINE_ID
   
 unit-test:
