--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -27,6 +27,6 @@ management.endpoint.info.enabled=true
 spring.jackson.time-zone=America/Porto_Velho
 
 br.gov.ro.pge.sei.api.ws.url=https://treinamento.sei.sistemas.ro.gov.br/sei/ws/SeiWS.php
-br.gov.ro.pge.sei.api.ws.sistema=RATIO
+br.gov.ro.pge.sei.api.ws.sistema=PGE_HOMOLOG
 br.gov.ro.pge.sei.api.ws.servico=SERVICE
 br.gov.ro.pge.sei.api.ws.unidade=
